--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,15 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.zrq.advancedlight"
         minSdk 22
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -31,7 +32,9 @@ android {
     packagingOptions{
         exclude 'META-INF/DEPENDENCIES'
     }
-
+    viewBinding{
+        enabled true
+    }
 }
 
 dependencies {
