--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,29 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zrq.advancedlight">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <permission
+        android:name="DatabaseProvider._READ_PERMISSION"
+        android:protectionLevel="normal" />
+    <permission
+        android:name="DatabaseProvider._WRITE_PERMISSION"
+        android:protectionLevel="normal" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -20,28 +36,15 @@
         android:theme="@style/Theme.AdvancedLight"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".activity.PostActivity"
+            android:name=".activity.kotlin.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.OkHttpActivity"
-            android:exported="false" />
+            android:name=".activity.kotlin.ComposeActivity"
+            android:exported="false"
+            android:label="@string/title_activity_compose"
+            android:theme="@style/Theme.AdvancedLight" />
         <activity
-            android:name=".activity.WebActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.PictureActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.MediaActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.SMSActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.ContactActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activity.CalendarActivity"
+            android:name=".activity.kotlin.CameraActivity"
             android:exported="false" />
 
         <provider
@@ -49,48 +52,81 @@
             android:authorities="com.zrq.advancedlight"
             android:enabled="true"
             android:exported="true" />
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.zrq.advancedlight.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/files" />
+        </provider>
 
         <activity
-            android:name=".activity.NoteContentActivity"
+            android:name=".activity.advanced.PostActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.UpLoadFileActivity"
+            android:name=".activity.advanced.OkHttpActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.RequestTestActivity"
+            android:name=".activity.advanced.WebActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.ImageActivity"
+            android:name=".activity.advanced.PictureActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.PicLoadActivity"
+            android:name=".activity.advanced.MediaActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.HttpActivity"
+            android:name=".activity.advanced.SMSActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.HorizontalViewActivity"
+            android:name=".activity.advanced.ContactActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.CustomOtherViewActivity"
+            android:name=".activity.advanced.CalendarActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.AnimatorActivity"
+            android:name=".activity.advanced.NoteContentActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.CustomViewActivity"
+            android:name=".activity.advanced.UpLoadFileActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.LoginActivity"
+            android:name=".activity.advanced.RequestTestActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.NotificationActivity"
+            android:name=".activity.advanced.ImageActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.CardViewActivity"
+            android:name=".activity.advanced.PicLoadActivity"
             android:exported="false" />
         <activity
-            android:name=".activity.MyRecyclerViewActivity"
+            android:name=".activity.advanced.HttpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.HorizontalViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.CustomOtherViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.AnimatorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.CustomViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.NotificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.CardViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.advanced.MyRecyclerViewActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
